Update .env, CodeEditorWindow.jsx, and 4 more files...

--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@ REACT_API_URL='http://localhost:5001/api'
 REACT_APP_NOT_SECRET_CODE=abcdef
 REACT_APP_INTERACTIVE_ANALYZE='http://localhost:3000'
 REACT_APP_GITHUB_API_URL
+REACT_APP_RAPID_API_URL='https://rapidapi.com'
+REACT_APP_RAPID_API_HOST='google-translate1.p.rapidapi.com'
+REACT_APP_RAPID_API_KEY='your-rapid-api-key'
 NODE_ENV=development
