--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-file-icon": "^1.1.0",
+    "react-folder-tree": "^5.0.3",
     "react-github-btn": "^1.3.0",
     "react-github-login": "^1.0.3",
     "react-icons": "^4.4.0",
