Update .babelrc, .env, and 22 more files...

--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,5 @@
+// babelrc config
 {
-  "presets": [
-    "@babel/preset-react",
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "browsers": "last 2 versions"
-        },
-        "modules": false,
-        "loose": false
-      }
-    ]
-  ],
-  "plugins": ["transform-class-properties"],
-  "env": {
-    "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
-    }
-  }
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
