--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_RAPID_API_URL='https://rapidapi.com'
 REACT_APP_RAPID_API_HOST='google-translate1.p.rapidapi.com'
 REACT_APP_RAPID_API_KEY='your-rapid-api-key'
 NODE_ENV=development
+SKIP_PREFLIGHT_CHECK=true
