--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "cloudinary-react": "^1.8.1",
     "console-feed": "^3.4.0",
     "emoji-picker-react": "^3.5.1",
-    "framer-motion": "^6.4.2",
     "graphql": "^16.5.0",
     "graphql.macro": "^1.4.2",
     "grunt-cli": "^1.4.3",
     "html-react-parser": "^3.0.1",
     "http-proxy-middleware": "^2.0.6",
+    "monaco-editor": "^0.34.1",
     "monaco-themes": "^0.4.2",
     "nouislider": "15.6.0",
     "particles-bg": "^2.5.5",
@@ -58,7 +58,6 @@
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-file-icon": "^1.1.0",
-    "react-folder-tree": "^5.0.3",
     "react-github-btn": "^1.3.0",
     "react-github-login": "^1.0.3",
     "react-icons": "^4.4.0",
@@ -83,8 +82,7 @@
     "three": "^0.142.0",
     "typebot-js": "^2.2.9",
     "uploadcare-widget": "^3.19.0",
-    "vscode-web": "^1.73.0",
-    "web-vitals": "^2.1.4"
+    "vscode-web": "^1.73.0"
   },
   "scripts": {
     "styleguide": "styleguidist server",
@@ -123,12 +121,18 @@
     "@babel/plugin-transform-react-jsx-source": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.9.6",
     "@craco/craco": "^6.4.5",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.31",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^3.4.2",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -138,6 +142,8 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "url-loader": "^4.1.1",
