--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,7 @@
         "maxtop",
         "navi",
         "toastify"
-    ]
+    ],
+    "reshiftscanner.analytics.consentGiven": true,
+    "snyk.advanced.organization": "a026e0e4-e7a1-4a19-a49f-3d9e9a0751bc"
 }
