--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-    "recommendations": [
-        "eamodio.gitlens",
-        "jheilingbrunner.vscode-gnupg-tool"
-    ]
+  "recommendations": ["eamodio.gitlens", "jheilingbrunner.vscode-gnupg-tool"]
 }
