--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary-react": "^1.8.1",
     "console-feed": "^3.4.0",
     "emoji-picker-react": "^3.5.1",
+    "firebase": "^9.14.0",
     "graphql": "^16.5.0",
     "graphql.macro": "^1.4.2",
     "grunt-cli": "^1.4.3",
@@ -58,6 +59,7 @@
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-file-icon": "^1.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-folder-tree": "^5.0.3",
     "react-github-btn": "^1.3.0",
     "react-github-login": "^1.0.3",
