--- a/package.json
+++ b/package.json
@@ -82,6 +82,10 @@
     "source-map-explorer": "^2.5.2",
     "stream-chat": "^6.7.2",
     "stream-chat-react": "^9.1.4",
+    "terminal-in-react": "^4.3.1",
+    "terminal-in-react-node-eval-plugin": "^2.0.0",
+    "terminal-in-react-pseudo-file-system-plugin": "^3.0.0",
+    "terminal-in-react-vi-plugin": "^1.1.0",
     "three": "^0.142.0",
     "typebot-js": "^2.2.9",
     "uploadcare-widget": "^3.19.0",
