--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/user-event": "^14.2.1",
     "@uiw/codemirror-theme-sublime": "^4.10.3",
     "@uiw/react-codemirror": "^4.12.4",
+    "algoliasearch": "^4.14.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
@@ -49,15 +50,18 @@
     "ra-data-simple-rest": "^4.2.1",
     "react": "^18.2.0",
     "react-admin": "^4.2.0",
-    "react-alice-carousel": "^2.6.1",
+    "react-alice-carousel": "^2.7.0",
     "react-animated-css": "^1.2.1",
+    "react-animated-term": "^2.0.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-calendar": "^3.9.0",
+    "react-code-auto-typing": "^1.0.5",
     "react-code-blocks": "^0.0.9-0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-dropzone": "^14.2.3",
     "react-file-icon": "^1.1.0",
     "react-firebase-hooks": "^5.1.1",
@@ -65,6 +69,7 @@
     "react-github-btn": "^1.3.0",
     "react-github-login": "^1.0.3",
     "react-icons": "^4.4.0",
+    "react-instantsearch-dom": "^6.38.1",
     "react-markdown": "^8.0.3",
     "react-markdown-editor-cm5": "^1.2.16",
     "react-mockup": "^1.2.2",
@@ -90,6 +95,7 @@
     "terminal-in-react-vi-plugin": "^1.1.0",
     "three": "^0.142.0",
     "typebot-js": "^2.2.9",
+    "typewriter-effect": "^2.19.0",
     "uploadcare-widget": "^3.19.0",
     "vscode-web": "^1.73.0"
   },
