--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,1 +1,16 @@
 version = 1
+
+[[analyzers]]
+name = "docker"
+
+[[analyzers]]
+name = "javascript"
+
+  [analyzers.meta]
+  plugins = ["react"]
+
+[[transformers]]
+name = "prettier"
+
+[[transformers]]
+name = "standardjs"
